--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+html,
+body {
+  margin: 0;
+  padding: 0;
+
+}
+body {
+  font: 14px 'Helvetica Neue', Helvetica, Arial,sans-serif;
+  color: #4d4d4d;
+  font-weight: 300;
+}
